public/style/apps/apps.less
// .apps-list {
	.list {
		.app {

			margin-bottom: 20px;
			> div {
				height: 150px;
				position: relative;
				background-color: rgba(255,255,255,0.5);
				padding: 10px;
					
				.gray {
					color: rgba(0,0,0,0.5)
				}

				.grayer {
					color: rgba(0,0,0,0.3)
				}

				.title {
					font-size: 1.2em;
					// font-weight: bold;
				}
				.provider-logos {
					img {
						width: 20px;
						margin-right: 5px;
						margin-top: 5px;
					}
				}

				.auth-type {
					position: absolute;
					bottom: 10px;
					left: 10px;
					
				}

				.actions {
					position: absolute;
					bottom: 10px;
					right: 10px;
				}

				.domains {
					font-size: 0.9em;
				}
			}
			

			
		}
	}
	
// }

.apps-page {
	padding: 10px;
}

.app-creation {
	form {
		max-width: 500px;
		margin: auto;
		margin-top: 100px;
	}
}

